--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="assets/favicon_b.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/favicon_c.png" type="image/x-icon">
   <title>Nicole Ho @nh___nh___</title>
   <!-- <link rel="stylesheet" href="/assets/style.css"> -->
 </head>
@@ -56,7 +56,7 @@ a {
 }
 
 a:hover {
-  text-shadow: 0 0 2px rgb(36, 36, 36);
+  text-shadow: 0 0 2px rgb(58, 58, 58);
 }
 
 .main * {
