updated background image

--- a/index.html
+++ b/index.html
@@ -9,17 +9,13 @@
 </head>
 <body>
   <div class="main">
-    <div style="padding-bottom: 43.2px;">
       <h1>Nicole Ho</h1>
       <h2>Design and development for web and publication</h2>  
-    </div>
-    <div>
-      <p>For new projects</p>
-      <a href="mailto:nicolezxho@gmail.com"><p>nicolezxho@gmail.com</p></a><br>
-      <p>Selected work</p>
-      <a href="https://www.instagram.com/nh___nh___/"><p>@nh___nh___</p></a><br>
+      <p>For new projects<br>
+      <a href="mailto:nicolezxho@gmail.com">nicolezxho@gmail.com</a></p>
+      <p>Selected work<br>
+      <a href="https://www.instagram.com/nh___nh___/">@nh___nh___</a></p>
       <p>Thank you for stopping by ❁</p>
-    </div>
   </div>
 </body>
 </html>
@@ -37,9 +33,9 @@
 }
 
 body {
-  background-image: url("assets/nh_holding_background_c.jpg");
+  background-image: url("assets/nh_holding_background_b2.jpg");
   background-size: cover;
-  background-position: center bottom 70%;
+  background-position: center bottom 45%;
   margin: 0;
   padding: 16px;
 }
@@ -64,9 +60,17 @@ a:hover {
   color: #555555;
   font-size: 36px;
   line-height: 1.2;
-  margin: 0;
+  margin-top: 0;
   padding: 0;
   font-weight: normal;
+}
+
+h1 {
+  margin: 0;
+}
+
+h2, p {
+  margin-bottom: calc(36px * 1.2);
 }
 
 .main {
