--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <h1>Nicole Ho</h1>
       <h2>Design and development for web and publication</h2>  
       <p>For new projects<br>
-      <a href="mailto:nicolezxho@gmail.com">nicolezxho@gmail.com</a></p>
+      <a href="mailto:nh@nicoleho.net">nh@nicoleho.net</a></p>
       <p>Selected work<br>
       <a href="https://www.instagram.com/nh___nh___/">@nh___nh___</a></p>
       <p>Thank you for stopping by ❁</p>
