--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <h2>Design and development for web and print</h2>
       <p>
         For new projects<br />
-        <a href="mailto:nicolezxho@gmail.com">nicolezxho@gmail.com</a>
+        <a href="mailto:nh@nicoleho.net">nh@nicoleho.net</a>
       </p>
       <p>
         Selected work<br />
