--- a/index.html
+++ b/index.html
@@ -1,4 +1,22 @@
 <html lang="en">
+  <!--   
+                @@@@@@@
+             @@@       @@@
+           @@@@         @@@@
+          @@@             @@@
+    @@@@@@@@               @@@@@@@@
+  @@@                             @@@
+ @@                                 @@
+@@@        nicole ho dot net        @@@
+ @@           @nh___nh___           @@
+  @@@@                           @@@@
+      @@@                     @@@
+     @@                         @@
+     @@                         @@
+     @@@          @@@          @@@
+       @@@@     @@@@@@@     @@@@
+          @@@@@@       @@@@@@
+ -->
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
